Fix page-banner left padding to align properly with wordmark.

--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -620,7 +620,7 @@ PAGE BANNERS
 ******************************************************************/
 .page-banner {
   min-height: 64px;
-  padding-left: 10px;
+  padding-left: 20px;
   margin-top: 0;
   padding-top: 10px;
 }
